--- a/WeatherApp/UI/Storyboards/Base.lproj/Main.storyboard
+++ b/WeatherApp/UI/Storyboards/Base.lproj/Main.storyboard
@@ -60,22 +60,22 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="A9Y-oI-nBI" userLabel="Detail Info View">
-                                <rect key="frame" x="20" y="386.5" width="121" height="77.5"/>
+                                <rect key="frame" x="20" y="386.5" width="125.5" height="77.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Humidity: 42%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jjc-kr-FP6">
-                                        <rect key="frame" x="0.0" y="0.0" width="121" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="125.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pressure: 25dPI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPa-cj-kXN">
-                                        <rect key="frame" x="0.0" y="28.5" width="121" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pressure: 25 dPI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPa-cj-kXN">
+                                        <rect key="frame" x="0.0" y="28.5" width="125.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feels Like: 30º" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g4X-LB-05s">
-                                        <rect key="frame" x="0.0" y="57" width="121" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="57" width="125.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -100,14 +100,14 @@
                     </view>
                     <navigationItem key="navigationItem" title="Search" id="2Or-O7-rFJ"/>
                     <connections>
-                        <outlet property="cityName" destination="r1L-lW-YPd" id="BtQ-gv-UsJ"/>
+                        <outlet property="cityNameLabel" destination="r1L-lW-YPd" id="fSk-Ab-8tx"/>
                         <outlet property="feelsLikeLabel" destination="g4X-LB-05s" id="4wE-O1-7yo"/>
                         <outlet property="humidityLabel" destination="Jjc-kr-FP6" id="guf-QX-Q3Y"/>
                         <outlet property="pressureLabel" destination="sPa-cj-kXN" id="E1x-tq-Ens"/>
                         <outlet property="searchBar" destination="uwz-2h-VsQ" id="4km-D9-szd"/>
-                        <outlet property="sfSymbol" destination="Vnz-4x-eF3" id="875-uJ-PXv"/>
-                        <outlet property="weatherCelcius" destination="23H-Zr-cKs" id="lxC-Iz-jtS"/>
-                        <outlet property="weatherMain" destination="XOM-Ux-JF7" id="nDt-db-hob"/>
+                        <outlet property="sfSymbolLabel" destination="Vnz-4x-eF3" id="Oe4-Wv-T3a"/>
+                        <outlet property="weatherCelciusLabel" destination="23H-Zr-cKs" id="yDe-eq-h3n"/>
+                        <outlet property="weatherMainLabel" destination="XOM-Ux-JF7" id="9Nz-tO-WWe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
